[package]
name = "star-cat"
description = "A simple game where you play as a cat in space"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.58"
wasm-bindgen = "0.2.81"
macroquad-particles = "0.2.2"
wasm-bindgen-futures = "0.4"
macroquad = { version = "0.4", features = ["default"] }


# Add this to force glam to use the same version
glam = "=0.21.3"  # Pin to exact version that macroquad-particles expects

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
